# ImADHD

./: .env.example  .gitignore  CHANGELOG.md  README.ko.md  README.md  pyproject.toml
docs/: design.md
imadhd/: __init__.py  __main__.py  boot_check.py  cli.py  config.py  host.py  install.py  setup_commands.py  uninstall.py  watchdog.py
imadhd/boards/: pin_board.py  progress_board.py
imadhd/commands/: __init__.py  base.py  close_command.py  doctor_command.py  help_command.py  inject_command.py  label_command.py  list_command.py  new_command.py  open_command.py  (+5 more)
scripts/: diag_slots.py  install.ps1  pin_now.py  repin.py  smoke_pipe_pid.py
tests/: conftest.py  test_ask_hook_router_alive.py  test_ask_manager.py  test_boot_check.py  test_busy_hook_drift.py  test_close_command_linux.py  test_close_multi.py  test_config.py  test_config_auto_detect.py  test_config_route_all_asks.py  test_dispatch_hook.py  test_doctor_command.py  test_help_command.py  test_host.py  test_host_korean_input.py  test_host_resolve.py  test_host_write_record.py  test_inject_logic.py  test_install_migration.py  test_io_utils.py  test_list_command.py  test_marker_capture.py  test_marker_guard_hook.py  test_markup.py  test_new_command.py  test_numberalloc.py  test_open_close_stop_commands.py  test_open_command_linux.py  test_open_command_provider.py  test_parsing.py  test_perm_hook.py  test_perm_manager.py  test_pin_board.py  test_pipe_win.py  test_proc_win.py  test_register_hook_tmux_pane.py  test_registry.py  test_registry_concurrency.py  test_registry_pid_reuse.py  test_reply_hook.py  (+15 more)
(+31 files in other folders)
